--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,32 +1,52 @@
 /* Normal desktop :1200px. */
 @media (min-width: 1200px) and (max-width: 1500px) {
-
-
+   
 }
-
 
 /* Normal desktop :992px. */
 @media (min-width: 992px) and (max-width: 1200px) {
-
-
+    
 }
 
- 
 /* Tablet desktop :768px. */
 @media (min-width: 768px) and (max-width: 991px) {
-
-
+    
 }
 
- 
 /* small mobile :320px. */
 @media (max-width: 767px) {
+	.navbar-logo {
+		padding: 0.5rem;
+	}
 
- 
+	.slider-area {
+		height: 30vh;
+	}
+	.our-services-head-text {
+		margin-bottom: 0px;
+		padding-bottom: 0;
+		height: 5rem;
+		display: flex;
+		justify-content: center;
+		align-items: end;
+		/* background-color: pink; */
+	}
+
+	.about-container {
+        margin: 0px;
+        padding: 0px;
+        /* background-color: aqua; */
+    }
+    
+    .about-section-start{
+        height: auto;
+        padding: 0;
+    }
 }
- 
+
 /* Large Mobile :480px. */
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-.container {width:450px}
- 
+	.container {
+		width: 450px;
+	}
 }
